--- a/Time Series Forecast.ipynb
+++ b/Time Series Forecast.ipynb
@@ -286,7 +286,7 @@
    "source": [
     "ts = select(df, 1005609, \"SM\", 14)\n",
     "\n",
-    "ts_moving_avg_diff = (ts - pd.rolling_mean(ts, 12)).dropna()\n",
+    "ts_moving_avg_diff = (ts - ts.rolling_mean(, 12)).dropna()\n",
     "test_stationarity(ts_moving_avg_diff)"
    ]
   },
@@ -410,149 +410,6 @@
    "source": [
     "plt.plot(select(df, 1005609, \"SM\", 22))"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Decomposing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "You must specify a freq or x must be a pandas object with a timeseries index witha freq not set to None",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                             Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-74-320a78619543>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mstatsmodels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtsa\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mseasonal\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mseasonal_decompose\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdecomposition\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mseasonal_decompose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mtrend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdecomposition\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrend\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mseasonal\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdecomposition\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mseasonal\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python2.7/dist-packages/statsmodels/tsa/seasonal.pyc\u001b[0m in \u001b[0;36mseasonal_decompose\u001b[0;34m(x, model, filt, freq, two_sided)\u001b[0m\n\u001b[1;32m     82\u001b[0m             \u001b[0mfreq\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpfreq\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     83\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 84\u001b[0;31m             raise ValueError(\"You must specify a freq or x must be a \"\n\u001b[0m\u001b[1;32m     85\u001b[0m                              \u001b[0;34m\"pandas object with a timeseries index with\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     86\u001b[0m                              \"a freq not set to None\")\n",
-      "\u001b[0;31mValueError\u001b[0m: You must specify a freq or x must be a pandas object with a timeseries index witha freq not set to None"
-     ]
-    }
-   ],
-   "source": [
-    "from statsmodels.tsa.seasonal import seasonal_decompose\n",
-    "decomposition = seasonal_decompose(ts)\n",
-    "\n",
-    "trend = decomposition.trend\n",
-    "seasonal = decomposition.seasonal\n",
-    "residual = decomposition.resid\n",
-    "\n",
-    "plt.subplot(411)\n",
-    "plt.plot(ts_log, label='Original')\n",
-    "plt.legend(loc='best')\n",
-    "plt.subplot(412)\n",
-    "plt.plot(trend, label='Trend')\n",
-    "plt.legend(loc='best')\n",
-    "plt.subplot(413)\n",
-    "plt.plot(seasonal,label='Seasonality')\n",
-    "plt.legend(loc='best')\n",
-    "plt.subplot(414)\n",
-    "plt.plot(residual, label='Residuals')\n",
-    "plt.legend(loc='best')\n",
-    "plt.tight_layout()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DAY\n",
-       "2013-07-01    38\n",
-       "2013-07-02    38\n",
-       "2013-07-03    29\n",
-       "2013-07-04    33\n",
-       "2013-07-05    63\n",
-       "2013-07-08    36\n",
-       "2013-07-09    52\n",
-       "2013-07-10    33\n",
-       "2013-07-11    39\n",
-       "2013-07-12    20\n",
-       "2013-07-15    48\n",
-       "2013-07-16     6\n",
-       "2013-07-17    27\n",
-       "2013-07-18    24\n",
-       "2013-07-19     7\n",
-       "2013-07-22    26\n",
-       "2013-07-23    12\n",
-       "2013-07-24    21\n",
-       "2013-07-25    32\n",
-       "2013-07-26    14\n",
-       "2013-07-29    10\n",
-       "2013-07-30    42\n",
-       "2013-07-31    20\n",
-       "2013-08-01    20\n",
-       "2013-08-02    43\n",
-       "2013-08-05    25\n",
-       "2013-08-06    19\n",
-       "2013-08-07    39\n",
-       "2013-08-08    39\n",
-       "2013-08-09    40\n",
-       "              ..\n",
-       "2015-11-13    11\n",
-       "2015-11-16    22\n",
-       "2015-11-17    30\n",
-       "2015-11-18    14\n",
-       "2015-11-19    31\n",
-       "2015-11-20    40\n",
-       "2015-11-23    51\n",
-       "2015-11-24    25\n",
-       "2015-11-25     1\n",
-       "2015-11-27    15\n",
-       "2015-11-30    36\n",
-       "2015-12-01    14\n",
-       "2015-12-02    13\n",
-       "2015-12-03    20\n",
-       "2015-12-04    28\n",
-       "2015-12-08    54\n",
-       "2015-12-09     6\n",
-       "2015-12-10    44\n",
-       "2015-12-11    16\n",
-       "2015-12-14    22\n",
-       "2015-12-15    28\n",
-       "2015-12-16    42\n",
-       "2015-12-17    18\n",
-       "2015-12-21    60\n",
-       "2015-12-22    34\n",
-       "2015-12-23    36\n",
-       "2015-12-24    25\n",
-       "2015-12-25    19\n",
-       "2015-12-29    18\n",
-       "2015-12-30    36\n",
-       "Name: SIZE, dtype: int64"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
